# pyatv-http

./: .gitignore  .renovaterc.json  README.md  biome.json  hk.pkl  mise.toml  pyproject.toml
.github/workflows/: hk.yml  release.yml
src/pyatv_http/: __init__.py  app.py  atv.py  auth.py  cli.py  config.py  gen_config.py
tests/: test_app.py  test_atv.py  test_cli.py  test_config.py  test_gen_config.py
